# constellate

./: .env.sample  Dockerfile  Pipfile  README.md  justfile  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy-live.yml  deploy-staging.yml
cl8/: admin.py  conftest.py
cl8/static/js/: home-page.js  htmx.v1.9.10.js  profile-form-tomselect.js  profile-page.js
cl8/templates/: _active_tags_list.html  _profile.html  _profile_edit.html  _profile_edit_main_fields.html  _profile_edit_modal.html  _profile_empty.html  invite_new_profile.mjml.html
cl8/templates/pages/: _paginated_profiles.html  home.html
cl8/templates/widgets/: custom_file_widget.html
cl8/users/: admin.py  forms.py  importers.py  models.py  widgets.py
cl8/users/api/: views.py
cl8/users/management/commands/: import_single_user_from_gsheets.py
cl8/users/slack_openid_connect/: provider.py  views.py
cl8/users/templatetags/: daisy_helpers.py  mjml.py
cl8/users/tests/: test_email.py  test_importer_airtable.py  test_models.py
cl8/utils/: vcard_util.py
cl8/utils/tests/: test_vcard_util.py
config/: urls.py
config/settings/: base.py
docs/: installation.md  setting-up-airtable.md  setting-up-google-sheets.md  setting-up-slack.md
envs/: fly-live.toml  fly-staging.toml
theme/static_src/: package.json
theme/templates/: base.html
