[project]
name = "constellate-cat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "airtable-python>=0.1.1",
    "argon2-cffi>=23.1.0",
    "awscli-plugin-endpoint>=0.4",
    "awscli>=1.35.0",
    "dj-taggit-serializer>=0.1.7",
    "django-allauth[socialaccount]==0.63.5",
    "django-anymail[mailgun]>=12.0",
    "django-autocomplete-light>=3.11.0",
    "django-browser-reload>=1.15.0",
    "django-cors-headers>=4.4.0",
    "django-debug-toolbar>=4.3.0",
    "django-environ>=0.11.2",
    "django-extensions>=3.2.3",
    "django-filter>=23.5",
    "django-gravatar2>=1.4.5",
    "django-htmx>=1.19.0",
    "django-model-utils>=5.0.0",
    "django-storages[boto3]>=1.14.4",
    "django-stubs>=5.1.0",
    "django-taggit-labels>=0.7.0",
    "django-taggit>=6.1.0",
    "django-tailwind>=3.8.0",
    "django-upgrade>=1.21.0",
    "django-waffle>=4.1.0",
    "django-widget-tweaks>=1.5.0",
    "djangorestframework>=3.15.1",
    "django~=4.1.0",
    "drfpasswordless>=1.5.9",
    "gspread>=6.1.3",
    "gunicorn>=23.0.0",
    "ipdb>=0.13.13",
    "markdown-it-py>=3.0.0",
    "markdown>=3.7",
    "mjml-python>=1.3.3",
    "pillow>=10.4.0",
    "psycopg2-binary>=2.9.9",
    "pyairtable>=2.3.3",
    "python-slugify>=8.0.4",
    "pytz",
    "rich>=13.9.2",
    "sentry-sdk>=2.15.0",
    "shortuuid>=1.0.13",
    "slackclient>=2.9.4",
    "sorl-thumbnail==12.10.0",
    "typing-extensions>=4.12.2",
    "vobject>=0.9.8",
    "whitenoise>=6.7.0",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "django-coverage-plugin>=3.1.0",
    "djlint>=1.35.2",
    "factory-boy>=3.3.1",
    "flake8-isort>=6.1.1",
    "flake8>=7.1.1",
    "mypy>=1.11.2",
    "pylint-django>=2.5.5",
    "pytest-django>=4.9.0",
    "pytest-factoryboy>=2.7.0",
    "pytest-mock>=3.14.0",
    "pytest-notifier>=1.0.4",
    "pytest-sugar>=1.0.0",
    "pytest>=8.3.3",
]
